Update citation and cliff plotting

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -2,8 +2,8 @@
   title = {A {{Dual Perspective}} of {{Reinforcement Learning}} for {{Imposing Policy Constraints}}},
   author = {De Cooman, Bram and Suykens, Johan},
   date = {2024-04},
-  journaltitle = {IEEE Transactions on Artificial Intelligence},
+  journal = {IEEE Transactions on Artificial Intelligence},
   eprint = {2404.16468},
   eprinttype = {arXiv},
-  doi = {10.48550/arXiv.2404.16468}
+  doi = {10.1109/TAI.2025.3564898}
 }
